@@ -171,3 +171,4 @@ Release 1.7
 * Implemented FR 2711884 [ERDesignerNG] Add support for hidden relationships
 * Implemented FR 2686547 [ERDesignerNG] Export to HTML
 * Implemented FR 2220184 [ERDesignerNG] Make documentation available as JavaHelp
+* Implemented FR 2690710 [ERDesignerNG] Start script should switch to installation directory
